<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hype!</string>
    <string name="cover_desc">Cover</string>
    <string name="arrow_desc">Arrow</string>
    <string name="get_hype">get hype!</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="current_page_header">Page</string>
    <string name="current_page_number">1</string>
    <string name="no_movies_msg">There aren\'t any movie yet :(</string>
    <string name="no_hype_msg">You don\'t have any movie saved.</string>
    <string name="loading_msg">Loading…</string>
    <string name="reading_msg">Database is been read.\nWait a second…</string>
    <string name="pref_country">Country</string>
    <string name="pref_provider">Provider</string>
    <string name="pref_country_def">es</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_title">Title</string>
    <string name="loading_text">Loading…</string>
    <string name="label_year">Year</string>
    <string name="label_duration">Duration</string>
    <string name="label_director">Director</string>
    <string name="label_actor">Cast</string>
    <string name="label_genre">Genre</string>
    <string name="hype">Hype!</string>
    <string name="date_default">0/0/0</string>
    <string name="more_info">+ info</string>
    <string name="link_des">link</string>
    <string name="logo_des">Logo</string>
    <string name="hype_section_text">Hype!</string>
    <string name="theaters_section_text">In theaters</string>
    <string name="releases_section_text">Coming soon</string>
    <string name="search_hint">Search by title</string>
    <string name="no_results_msg">No results.</string>
    <string name="adds">Show adds</string>
    <string name="pref_db">Clear database</string>
    <string name="search_menu_but">Search</string>
    <string name="update_but">Update</string>
    <string name="cancel_but">Cancel</string>
    <string name="options_but">Settings</string>
    <string name="label_rating">Rating</string>
    <string name="votes">votes</string>
    <string name="rights_msg">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="share_release_ind">Check out the movie <i>%1$s</i>.</string>
    <string name="share_theaters"><i>%1$s</i> is in theaters!</string>
    <plurals name="share_release">
        <item quantity="one">Only one day left for <i>%2$s</i>!</item>
        <item quantity="other">%1$d days left for <i>%2$s</i>.</item>
    </plurals>
    <string name="share_msg">Share the movie <i>%1$s</i>.</string>
    <string name="synopsis_list_structure"><i>%1$s</i>…</string>
    <string name="votes_structure"><i>%1$s</i> (<i>%2$s</i> votes) </string>
    <string name="watch_trailer">Check movie trailer on Youtube</string>
    <string name="daily_updates">Daily updates</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="num_page">Page %1$d of %2$d</string>
    <string name="releases_but">Go to next releases</string>
    <string name="theaters_but">Go to in theaters</string>
    <string name="hype_but">Go to hyped movies</string>
    <string name="av_theaters_but">Buy tickets</string>
    <string name="av_calendar_but">Send to the calendar</string>
    <string name="av_detail_but">Open movie detail</string>
    <string name="av_hype_but">Save the movie</string>
    <string name="av_link_but">Open in website</string>
    <string name="av_share_but">Share</string>
    <string name="trailer_but">Open trailer in youtube</string>
    <string name="share_ad">Hype!</string>
    <string name="dialog_hype_title">Remove saved movie</string>
    <string name="dialog_hype_text">This movie will disappear from this view. Are you sure?</string>
    <string name="dialog_db_title">Dump database</string>
    <string name="dialog_db_text">All data will be deleted. Are you sure?</string>
</resources>
