<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:padding="5dip"
    android:id="@+id/container"
    android:onClick="showExpandedMovieData">

    <LinearLayout
        android:id="@+id/basicRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="50dip"
            android:layout_height="80dip"
            android:layout_marginEnd="5dip"
            android:contentDescription="@string/cover_desc"
            android:padding="3dip"
            android:onClick="setExpandedItemAndOpenMovieDetail"
            />

        <LinearLayout
            android:id="@+id/info_basic"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="5dp"
                android:text="@string/label_title"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/date_default"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandedData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_below="@id/basicRow"
        >

        <TextView
            android:id="@+id/av_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif-condensed"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:descendantFocusability="blocksDescendants"
            >

            <ImageButton
                android:id="@+id/av_theaters"
                android:contentDescription="@string/av_theaters_but"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_theaters_black_24dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="?attr/selectableItemBackground"
                android:tint="@color/colorAppText"
                android:backgroundTint="@color/colorWindowBackground"
                android:gravity="center"
                android:onClick="showCinemas"
                />

            <ImageButton
                android:id="@+id/av_date"
                android:contentDescription="@string/av_calendar_but"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_event_black_24dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="?attr/selectableItemBackground"
                android:tint="@color/colorAppText"
                android:backgroundTint="@color/colorWindowBackground"
                android:gravity="center"
                android:onClick="sendToCalendar"
                />

            <ImageButton
                android:id="@+id/av_movie_detail"
                android:contentDescription="@string/av_detail_but"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:srcCompat="@drawable/ic_info_outline_black_24dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="?attr/selectableItemBackground"
                android:tint="@color/colorAppText"
                android:backgroundTint="@color/colorWindowBackground"
                android:onClick="openMovieDetail"
                />

            <ImageButton
                android:id="@+id/av_hype"
                android:contentDescription="@string/av_hype_but"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:srcCompat="@drawable/ic_favorite_border_black_24dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="?attr/selectableItemBackground"
                android:tint="@color/colorAppText"
                android:backgroundTint="@color/colorWindowBackground"
                android:onClick="flagHype"
                />

            <ImageButton
                android:id="@+id/av_link"
                android:contentDescription="@string/av_link_but"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:gravity="center"
                app:srcCompat="@drawable/ic_open_in_browser_black_24dp"
                android:tint="@color/colorAppText"
                android:backgroundTint="@color/colorWindowBackground"
                android:onClick="openIntoWeb"
                />

            <ImageButton
                android:id="@+id/av_share"
                android:contentDescription="@string/av_share_but"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:gravity="center"
                app:srcCompat="@drawable/ic_share_black_24dp"
                android:tint="@color/colorAppText"
                android:backgroundTint="@color/colorWindowBackground"
                android:onClick="openShareMenu"
                />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/hype_msg"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/get_hype"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/hype_mark"
        android:tint="@color/colorAccent"
        android:visibility="invisible" />


</RelativeLayout>