<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clacksdepartment.hyped.MovieDetailFragment"
    android:id="@+id/fragment_movie_detail"
    android:background="@drawable/fragment_rectangle_shape"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_margin="20dp"
    android:elevation="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/fill_detail"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-regular"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="gravity"
                android:paddingTop="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="0dp"
                android:text="@string/label_title"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:id="@+id/movie_detail_cover"/>

            <TextView
                android:id="@+id/movie_detail_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:paddingTop="0dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:text="@string/loading_text"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:backgroundTint="@color/colorAccent"
                android:background="@color/colorAccent"
                android:layout_margin = "15dp"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:stretchColumns="1"
                android:shrinkColumns="1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/label_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="16sp"
                        android:gravity="end"
                        android:textColor="@color/colorAccent"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/label_year"/>

                    <TextView
                        android:id="@+id/movie_detail_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_text"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="16sp"/>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/label_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_duration"/>

                <TextView
                    android:id="@+id/movie_detail_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_text"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/label_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:gravity="end"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_director"/>

                <TextView
                    android:id="@+id/movie_detail_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/loading_text"
                    android:textSize="16sp"/>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_actor"/>

                <TextView
                    android:id="@+id/movie_detail_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/loading_text"
                    android:textSize="16sp"
                    />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/label_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_genre"/>

                <TextView
                    android:id="@+id/movie_detail_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/loading_text"
                    android:textSize="16sp"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/label_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="16sp"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/label_rating"/>

                    <TextView
                        android:id="@+id/movie_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/loading_text"
                        android:textSize="16sp"/>
                </TableRow>
            </TableLayout>
            
            <LinearLayout
                android:id="@+id/movie_detail_trailer_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="30dp"
                android:visibility="gone"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_detail_trailer"
                    android:contentDescription="@string/trailer_but"
                    app:srcCompat="@drawable/ic_play_circle_outline_black_24dp"
                    android:tint="@color/colorAccent"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAppText"
                    android:text="@string/watch_trailer"/>
            </LinearLayout>

        </LinearLayout>

</androidx.core.widget.NestedScrollView>

</LinearLayout>